--- a/index.html
+++ b/index.html
@@ -3,68 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>Widgets</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-        $( function() {
-            $( "#datepicker" ).datepicker({minDate: 7});
-        } );
+        $(function () {
+            $("#datepicker").datepicker({minDate: 7});
+        });
     </script>
 </head>
 <body>
-    <h1>Welcome to the widgets order system</h1>
-    <h3>Please fill out the form</h3>
-    <form action="index.php" class="container" method="POST">
-        <div class="row">
-            <div class="col">Widget QT.</div>
-            <div class="col">
-                <label for="quantity">
-                    <input type="text" name="quantity"><span>*must be an integer</span>
-                </label>
-            </div>
+<h1>Welcome to the widgets order system</h1>
+<h3>Please fill out the form</h3>
+<form action="index.php" class="container" method="POST">
+    <div class="row">
+        <div class="col">Widget QT.</div>
+        <div class="col">
+            <label for="quantity">
+                <input type="text" name="quantity" id="quantity"><span>*must be an integer</span>
+            </label>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col">Widget Color</div>
-            <div class="col">
-                <label for="color">
-                    <select name="color">
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="yellow">Yellow</option>
-                    </select>
-                </label>
-            </div>
+    <div class="row">
+        <div class="col">Widget Color</div>
+        <div class="col">
+            <label for="color">
+                <select name="color" id="color">
+                    <option value="red">Red</option>
+                    <option value="blue">Blue</option>
+                    <option value="yellow">Yellow</option>
+                </select>
+            </label>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col">Date needed by</div>
-            <div class="col">
-                <label for="date">
-                    <input type="text" id="datepicker" name="date"><span>*at least 1 week from current date</span>
-                </label>
-            </div>
+    <div class="row">
+        <div class="col">Date needed by</div>
+        <div class="col">
+            <label for="date">
+                <input type="text" id="datepicker" name="date"><span>*at least 1 week from current date</span>
+            </label>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col">Widget Type</div>
-            <div class="col">
-                <label for="type">
-                    <select name="type">
-                        <option value="standard">Widget</option>
-                        <option value="pro">Widget Pro</option>
-                        <option value="xtreme">Widget Xtreme</option>
-                    </select>
-                </label>
-            </div>
+    <div class="row">
+        <div class="col">Widget Type</div>
+        <div class="col">
+            <label for="type">
+                <select name="type" id="type">
+                    <option value="standard">Widget</option>
+                    <option value="pro">Widget Pro</option>
+                    <option value="xtreme">Widget Xtreme</option>
+                </select>
+            </label>
         </div>
-        <div class="row">
-            <div class="col">
-                <button type="submit">Submit order</button>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <button type="submit">Submit order</button>
         </div>
-    </form>
+    </div>
+</form>
 </body>
 </html>
