--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <h1>Welcome to the widgets order system</h1>
 <h3>Please fill out the form</h3>
-<form action="index.php" class="container" method="POST">
+<form action="app.php" class="container" method="POST">
     <div class="row">
         <div class="col">Widget QT.</div>
         <div class="col">
